--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amcom-test",
-  "version": "0.1.0",
+  "name": "amcom-jedi-masters",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
